# zetaflow

./: .gitignore  CMakeLists.txt  README.md
include/: HttpLoadBalancer.hpp  LoadBalancerFactory.hpp
include/communication/: HttpConnection.hpp  IConnection.hpp  gRPCConnection.hpp
include/connection/: ConnectionFactory.hpp  GRPCConnection.hpp  HTTPConnection.hpp  IConnection.hpp
include/loadbalancer/: LoadBalancer.hpp  LoadBalancerFactory.hpp
include/strategies/: ConsistentHashingStrategy.hpp  LeastConnectionsStrategy.hpp  LoadBalancingStrategy.hpp  RandomSelectionStrategy.hpp  RoundRobinStrategy.hpp
include/strategy/: ConsistentHashingStrategy.hpp  IStrategy.hpp  LeastConnectionsStrategy.hpp  LoadBalancingStrategy.hpp  RandomSelectionStrategy.hpp  RoundRobinStrategy.hpp  StrategyFactory.hpp
proto/: ZetaFlowService.proto  service.proto
src/: ConsistentHashingStrategy.cpp  HttpLoadBalancer.cpp  LeastConnectionsStrategy.cpp  LoadBalancerFactory.cpp  RandomSelectionStrategy.cpp  RoundRobinStrategy.cpp  main.cpp
src/communication/: HttpConnection.cpp  gRPCConnection.cpp
src/connection/: ConnectionFactory.cpp  GRPCConnection.cpp  HTTPConnection.cpp
src/loadbalancer/: LoadBalancer.cpp  LoadBalancerFactory.cpp
src/strategy/: ConsistentHashingStrategy.cpp  LeastConnectionsStrategy.cpp  RandomSelectionStrategy.cpp  RoundRobinStrategy.cpp  StrategyFactory.cpp
